k8s/overlays/local/pgadmin/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: demo-app
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: demo-app
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
