k8s/overlays/local/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: demo-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pgadmin
        backend:
          service:
            name: pgadmin-service
            port:
              number: 8080
